1912113_118P 스프링 기본구조

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,21 @@
 /jex00/target/
 /ex00/.settings/
 /jex00/.settings/
+/.metadata/
+/jex01/.settings/
+
+target
+build
+bin
+*~
+*.log
+.classpath
+.project
+*.ipr
+*.iws
+*.iml
+.settings
+.git
+.svn
+*.class
+*.bak
