--- a/jex01/pom.xml
+++ b/jex01/pom.xml
@@ -91,10 +91,17 @@
 		</dependency>
 
 		<!-- Servlet -->
-		<dependency>
+		<!--<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -109,6 +116,7 @@
 			<version>1.2</version>
 		</dependency>
 
+		<!--새로추가한것-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -145,9 +153,14 @@
 			<version>1.3.2</version>
 			<scope>compile</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.6</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
-
-	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
