--- a/jex01/pom.xml
+++ b/jex01/pom.xml
@@ -170,12 +170,21 @@
             <artifactId>log4jdbc-log4j2-jdbc4</artifactId>
             <version>1.16</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc6 -->
+
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.oracle/ojdbc6 &ndash;&gt;
         <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.4</version>
+        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc6 -->
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3</version>
         </dependency>
+
 
         <!--JSON-->
         <dependency>
@@ -206,17 +215,27 @@
     </dependencies>
 
     <repositories>
+        <!-- 오라클 JDBC라이브러리 관리 사이트 -->
         <repository>
-            <id>btsoft</id>
-            <url>http://192.168.1.11:8080/nexus/content/repositories/thirdparty/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
+            <id>oracle</id>
+            <name>Oracle JDBC Repository</name>
+            <url>http://repo.spring.io/plugins-release/</url>
         </repository>
     </repositories>
+
+
+    <!--    <repositories>
+            <repository>
+                <id>btsoft</id>
+                <url>http://192.168.1.11:8080/nexus/content/repositories/thirdparty/</url>
+                <releases>
+                    <enabled>true</enabled>
+                </releases>
+                <snapshots>
+                    <enabled>false</enabled>
+                </snapshots>
+            </repository>
+        </repositories>-->
 
     <build>
         <plugins>
