--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,51 @@ bin
 .svn
 *.class
 *.bak
+.idea
 
 
 /ex01/memonote/
 /.idea/
+.metadata/.mylyn/contexts/
+.metadata/.plugins/org.eclipse.buildship.core/
+.metadata/.plugins/org.eclipse.core.resources/.history/a2/
+.metadata/.plugins/org.eclipse.core.resources/.projects/ex00/org.eclipse.jdt.apt.core/
+.metadata/.plugins/org.eclipse.core.resources/.projects/ex00/org.eclipse.wst.jsdt.core/
+.metadata/.plugins/org.eclipse.core.resources/.projects/ex01/org.eclipse.jdt.apt.core/
+.metadata/.plugins/org.eclipse.core.resources/.projects/ex01/org.eclipse.wst.jsdt.core/
+.metadata/.plugins/org.eclipse.core.resources/.projects/jex00/org.eclipse.jdt.apt.core/
+.metadata/.plugins/org.eclipse.core.resources/.projects/jex00/org.eclipse.wst.jsdt.core/
+.metadata/.plugins/org.eclipse.core.resources/.projects/jex01/org.eclipse.jdt.apt.core/
+.metadata/.plugins/org.eclipse.core.resources/.projects/jex01/org.eclipse.wst.jsdt.core/
+.metadata/.plugins/org.eclipse.jdt.junit.core/
+.metadata/.plugins/org.eclipse.jst.jsp.core/translators/
+.metadata/.plugins/org.eclipse.mylyn.bugzilla.core/
+.metadata/.plugins/org.eclipse.mylyn.context.core/
+.metadata/.plugins/org.eclipse.mylyn.tasks.ui/
+.metadata/.plugins/org.eclipse.pde.api.tools/
+.metadata/.plugins/org.eclipse.pde.core/.p2/
+.metadata/.plugins/org.eclipse.rse.core/profiles/
+.metadata/.plugins/org.eclipse.userstorage.oauth/
+.metadata/.plugins/org.eclipse.wst.common.modulecore/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp0/conf/Catalina/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp0/temp/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp0/webapps/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp0/work/Catalina/localhost/ROOT/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp0/wtpwebapps/ex00/WEB-INF/classes/META-INF/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp0/wtpwebapps/ex00/resources/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp0/wtpwebapps/jex00/WEB-INF/classes/META-INF/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp0/wtpwebapps/jex00/resources/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp1/conf/Catalina/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp1/temp/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp1/webapps/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp1/work/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp1/wtpwebapps/jex00/WEB-INF/classes/META-INF/
+.metadata/.plugins/org.eclipse.wst.server.core/tmp1/wtpwebapps/jex00/resources/
+.metadata/.plugins/org.eclipse.wst.server.discovery/
+.metadata/.plugins/org.eclipse.wst.server.ui/
+.metadata/.plugins/org.springframework.ide.eclipse.boot.dash/
+.metadata/.plugins/org.springframework.ide.eclipse.boot/
+.metadata/.plugins/org.springsource.ide.eclipse.commons.frameworks.core/
+jex01/src/main/resources/META-INF/
+jex01/src/main/webapp/WEB-INF/classes/
+jex01/src/main/webapp/WEB-INF/spring/
