--- a/jex01/src/main/resources/config/datasource.properties
+++ b/jex01/src/main/resources/config/datasource.properties
@@ -2,3 +2,6 @@ datasource.classname=oracle.jdbc.driver.OracleDriver
 datasource.dburl=jdbc:oracle:thin:@192.168.1.13:1521:orcl
 datasource.username=study
 datasource.password=bts5735!
+#datasource.dburl=jdbc:oracle:thin:@localhost:1521:orcl
+#datasource.username=c##test
+#datasource.password=1234
