--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+### Java template
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# IntelliJ project files
+.idea
+.idea/*.xml
+*.iml
+out
+gen
+build
+rebel.xml
+
+# Compliled files
+/target/
+**/target
+
+/example/
+
+# Gradle
+.gradle
+/build/
+.gradletasknamecache
+
 # Project exclude paths
 target
 build
@@ -15,5 +43,3 @@ bin
 *.class
 *.bak
 
-
-/ex01/memonote/
