--- a/jex01/src/main/resources/config/datasource.properties
+++ b/jex01/src/main/resources/config/datasource.properties
@@ -1,5 +1,5 @@
-datasource.classname=oracle.jdbc.driver.OracleDriver
-datasource.dburl=jdbc:oracle:thin:@192.168.1.13:1521:orcl
+datasource.classname=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+datasource.dburl=jdbc:log4jdbc:oracle:thin:@192.168.1.13:1521:orcl
 datasource.username=study
 datasource.password=bts5735!
 #datasource.dburl=jdbc:oracle:thin:@localhost:1521:orcl
