--- a/jex01/pom.xml
+++ b/jex01/pom.xml
@@ -238,6 +238,11 @@
             <version>5.0.6.RELEASE</version>
         </dependency>
 
+        <dependency>
+        	<groupId>com.googlecode.json-simple</groupId>
+        	<artifactId>json-simple</artifactId>
+        	<version>1.1</version>
+        </dependency>
     </dependencies>
 
     <repositories>
